website/versioned_docs/version-2.0.0-alpha.10/node-client.globaljsoncontainerstorage.md
---
id: version-2.0.0-alpha.10-node-client.globaljsoncontainerstorage
title: GlobalJSONContainerStorage class
hide_title: true
original_id: node-client.globaljsoncontainerstorage
---
<!-- Do not edit this file. It is automatically generated by API Documenter. -->


## GlobalJSONContainerStorage class


<b>Signature:</b>

```typescript
export declare class GlobalJSONContainerStorage implements ContainerStorage 
```

## Constructors

|  Constructor | Modifiers | Description |
|  --- | --- | --- |
|  [(constructor)(driver)](./node-client.globaljsoncontainerstorage._constructor_.md) |  | Constructs a new instance of the <code>GlobalJSONContainerStorage</code> class |

## Methods

|  Method | Modifiers | Description |
|  --- | --- | --- |
|  [delAccessToken(namespace)](./node-client.globaljsoncontainerstorage.delaccesstoken.md) |  |  |
|  [delIdentity(namespace)](./node-client.globaljsoncontainerstorage.delidentity.md) |  |  |
|  [delOAuthRedirectAction(namespace)](./node-client.globaljsoncontainerstorage.deloauthredirectaction.md) |  |  |
|  [delUser(namespace)](./node-client.globaljsoncontainerstorage.deluser.md) |  |  |
|  [getAccessToken(namespace)](./node-client.globaljsoncontainerstorage.getaccesstoken.md) |  |  |
|  [getIdentity(namespace)](./node-client.globaljsoncontainerstorage.getidentity.md) |  |  |
|  [getOAuthRedirectAction(namespace)](./node-client.globaljsoncontainerstorage.getoauthredirectaction.md) |  |  |
|  [getUser(namespace)](./node-client.globaljsoncontainerstorage.getuser.md) |  |  |
|  [setAccessToken(namespace, accessToken)](./node-client.globaljsoncontainerstorage.setaccesstoken.md) |  |  |
|  [setIdentity(namespace, identity)](./node-client.globaljsoncontainerstorage.setidentity.md) |  |  |
|  [setOAuthRedirectAction(namespace, oauthRedirectAction)](./node-client.globaljsoncontainerstorage.setoauthredirectaction.md) |  |  |
|  [setUser(namespace, user)](./node-client.globaljsoncontainerstorage.setuser.md) |  |  |

